...
    }
    Column(
        Modifier
            .fillMaxSize()
            .indicatedVerticalScroll(rememberScrollState())
            .padding(16.dp)
            .testTag("screen-permissions"),
        verticalArrangement = Arrangement.spacedBy(12.dp),
    ) {
        Text(stringResource(R.string.permissions_help))
        if (devicePermissions != null || Manifest.permission.SYSTEM_ALERT_WINDOW in declaredPermissions) {
            PermissionGroupTitle(R.string.permissions_group_device)
            devicePermissions?.invoke()
...
